--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <section class="text-center col-md-12">
                 <hr>
-                   <button href="#fakelink" class="btn btn-lg btn-info btn-default">Read More</button> 
+                   <button href="#fakelink" class="btn btn-default">Read More</button> 
                 </section>
             </div>
         </div>
