--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <div class="main">
     <div class="container tim-container">
-        <div class="tim-title">
+        <div class="tim-title d-flex align-items-center">
 		<div class="row">  
 		<section class="text-center col-md-12">
 		    <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>		            
