--- a/index.html
+++ b/index.html
@@ -60,28 +60,27 @@
         </nav>
     </div><!--  end container-->
 
-        <div class='blurred-container text-center col-12'>
+        <div class='blurred-container'>
             <div class="motto">
                 <div>BEORNWILDE</div>
                 <!-- <div class="border no-right-border">Sh</div><div class="border">it</div>
                 <div>Done</div> -->
             </div>
-            <div class="img-src parallax-pro" style="background-image: url('assets/img/cover_6.jpg')"></div>
-        <!--     <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div> -->
+            <div class="img-src" style="background-image: url('assets/img/cover_6.jpg')"></div>
+<!--             <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div> -->
         </div>
 </div>
 
 
 <div class="main">
     <div class="container tim-container">
-        <div class="tim-title d-flex align-items-center">
-		<div class="row">  
-		<section class="text-center col-md-12">
-		    <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>		            
-                   <button href="#fakelink" class="btn btn-default">Read More</button> 
-                </section>
+            <div class="tim-title">
+              <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>
             </div>
-        </div>
+            <div class="buffer"></div>
+            <div id="btn-header">
+               <button href="#fakelink" class="btn btn-default">Read More</button> 
+            </div>     
     </div>
 </div>
 <div class="main" style="background-color: rgba(0,0,0,0);">
