--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- <div class="border no-right-border">Sh</div><div class="border">it</div>
                 <div>Done</div> -->
             </div>
-            <div class="img-src" style="background-image: url('assets/img/cover_6.jpg')"></div>
+            <div class="img-src parralax-pro" style="background-image: url('assets/img/cover_6.jpg')"></div>
 <!--             <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div> -->
         </div>
 </div>
