--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- <div class="border no-right-border">Sh</div><div class="border">it</div>
                 <div>Done</div> -->
             </div>
-            <div class="img-src parralax-pro" style="background-image: url('assets/img/cover_6.jpg')"></div>
+            <div class="img-src" style="background-image: url('assets/img/cover_6.jpg')"></div>
 <!--             <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div> -->
         </div>
 </div>
@@ -83,15 +83,28 @@
             </div>     
     </div>
 </div>
-<div class="main" style="background-color: rgba(0,0,0,0);">
+<div class="main" style="background-color: rgba(0,0,0,0.4);">
     <div class="container tim-container"style="background-color: rgba(0,0,0,0);">
-        <div class="tim-title">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+        <div class="container">
+            <div class="row">
+                  <div class="col-xs-6" id="perma-vid">
+                    <div>
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="250" width="450"allowfullscreen></iframe>
+                    </div>
+                  </div>
+                <div class="col-xs-6" id="perma-text">
+                  <div height="350">
+                      <header>
+                       <h1>PERMACULTURE</h1>
+                       <hr>
+                      </header>          
+                    <p><strong>“Permaculture</strong><i>is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
+                    <p>Here at <b>Beorn Wilde</b>, we are well aware of the many benefits and solutions that permaculture can provide. It’s something we incorporate into our personal lives and it’s also something that we utilise in our work.</p>
+                    <p>To gain a general overview of&nbsp; permaculture you can watch this video, or click <a href="https://www.permaculture.org.uk/knowledge-base/basics">here</a> to read about it in more detail.</p>
+                    <p>We hope it inspires you just as much as it inspires us!</p>
+                  </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
