--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
 </div>
 <div class="main" style="background-color: rgba(0,0,0,0.4);">
     <div class="container tim-container"style="background-color: rgba(0,0,0,0);">
-        <div class="container">
             <div class="row">
-                  <div class="col-xs-6" id="perma-vid">
-                    <div>
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="250" width="450"allowfullscreen></iframe>
-                    </div>
+                  <div class="col-md-6" id="perma-vid">
+                   <!--  <div class="resp-container"> -->
+                      <iframe class="resp-item" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="250" width="450" allowfullscreen></iframe>
+                 <!--    </div> -->
                   </div>
-                <div class="col-xs-6" id="perma-text">
+                <div class="col-md-6" id="perma-text">
                   <div height="350">
                       <header>
                        <h1>PERMACULTURE</h1>
@@ -105,7 +104,6 @@
                   </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 <!-- </div>
