--- a/index.html
+++ b/index.html
@@ -84,27 +84,25 @@
     </div>
 </div>
 <div class="main" style="background-color: rgba(0,0,0,0.4);">
-    <div class="container tim-container"style="background-color: rgba(0,0,0,0);">
-            <div class="row">
-                  <div class="col-md-6" id="perma-vid">
-                   <!--  <div class="resp-container"> -->
-                      <iframe class="resp-item" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="250" width="450" allowfullscreen></iframe>
-                 <!--    </div> -->
+            <div class="col-container">
+                  <div class="col-vid">
+                    <div class="iframe-wrap">
+                      <iframe class="resp-iframe" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+                    </div>
                   </div>
-                <div class="col-md-6" id="perma-text">
+                <div class="col-text">
                   <div height="350">
                       <header>
                        <h1>PERMACULTURE</h1>
                        <hr>
                       </header>          
-                    <p><strong>“Permaculture</strong><i> is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
+                    <p><strong>“Permaculture</strong><i>is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
                     <p>Here at <b>Beorn Wilde</b>, we are well aware of the many benefits and solutions that permaculture can provide. It’s something we incorporate into our personal lives and it’s also something that we utilise in our work.</p>
                     <p>To gain a general overview of&nbsp; permaculture you can watch this video, or click <a href="https://www.permaculture.org.uk/knowledge-base/basics">here</a> to read about it in more detail.</p>
                     <p>We hope it inspires you just as much as it inspires us!</p>
                   </div>
                 </div>
             </div>
-    </div>
 </div>
 <!-- </div>
 <div class="main">
