--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>     
     </div>
 </div>
-<div class="main" style="background-color: rgba(0,0,0,0.4);">
+<div class="main" style="background-color: rgba(0,0,0,0.4); height:100vh;">
             <div class="col-container">
                   <div class="col-vid">
                     <div class="iframe-wrap">
@@ -91,12 +91,12 @@
                     </div>
                   </div>
                 <div class="col-text">
-                  <div height="350">
+                  <div>
                       <header>
                        <h1>PERMACULTURE</h1>
                        <hr>
                       </header>          
-                    <p><strong>“Permaculture</strong><i>is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
+                    <p><strong>“Permaculture</strong><i> is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
                     <p>Here at <b>Beorn Wilde</b>, we are well aware of the many benefits and solutions that permaculture can provide. It’s something we incorporate into our personal lives and it’s also something that we utilise in our work.</p>
                     <p>To gain a general overview of&nbsp; permaculture you can watch this video, or click <a href="https://www.permaculture.org.uk/knowledge-base/basics">here</a> to read about it in more detail.</p>
                     <p>We hope it inspires you just as much as it inspires us!</p>
@@ -104,33 +104,13 @@
                 </div>
             </div>
 </div>
-<!-- </div>
 <div class="main">
     <div class="container tim-container">
-        <div class="tim-title">
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-        </div>
+            <div class="tim-title">
+              <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>
+            </div>   
     </div>
 </div>
-
-<div class="main" style="background-color: rgba(0,0,0,0);">
-    <div class="container tim-container"style="background-color: rgba(0,0,0,0);">
-        <div class="tim-title">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-        </div>
-    </div>
-</div> -->
-
 </body>
 
     <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
