--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>     
     </div>
 </div>
-<div class="main" style="background-color: rgba(0,0,0,0.4); height:100vh;">
+<div class="main" style="background-color: rgba(0,0,0,0.4); height:vh;">
             <div class="col-container">
                   <div class="col-vid">
                     <div class="iframe-wrap">
