--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!--     Font Awesome     -->
     <link href="bootstrap3/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" rel="stylesheet">
   
 </head>
 
@@ -83,34 +84,74 @@
             </div>     
     </div>
 </div>
-<div class="main" style="background-color: rgba(0,0,0,0.4); height:vh;">
-            <div class="col-container">
-                  <div class="col-vid">
+<div class="main" style="background-color: rgba(0,0,0,0.4);">
+    <div class="col-container">
+        <div class="row">
+            <div class="col-md-6 col-vid">
                     <div class="iframe-wrap">
                       <iframe class="resp-iframe" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
                     </div>
-                  </div>
-                <div class="col-text">
-                  <div>
+            </div>
+            <div class="col-md-6 col-text">
                       <header>
                        <h1>PERMACULTURE</h1>
                        <hr>
                       </header>          
-                    <p><strong>“Permaculture</strong><i> is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”<i></p>
+                   <i><p><strong>“Permaculture</strong> is a philosophy of working with, rather than against nature; of protracted and thoughtful observation rather than protracted and thoughtless labour; and of looking at plants and animals in all their functions, rather than treating any area as a single product system.”</p>
                     <p>Here at <b>Beorn Wilde</b>, we are well aware of the many benefits and solutions that permaculture can provide. It’s something we incorporate into our personal lives and it’s also something that we utilise in our work.</p>
                     <p>To gain a general overview of&nbsp; permaculture you can watch this video, or click <a href="https://www.permaculture.org.uk/knowledge-base/basics">here</a> to read about it in more detail.</p>
-                    <p>We hope it inspires you just as much as it inspires us!</p>
-                  </div>
-                </div>
-            </div>
-</div>
-<div class="main">
-    <div class="container tim-container">
-            <div class="tim-title">
-              <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>
+                    <p>We hope it inspires you just as much as it inspires us!</p></i>
             </div>   
+        </div>
     </div>
 </div>
+
+
+<div class="main">
+    <div class="container-bot">
+        <div class="row">
+                <div class="col-sm-auto"></div> 
+                <!-- center -->
+                <div class="col-sm-auto">
+                <h2><strong>COMMUNITY MINDED</strong></h2>
+                </div>
+                <!-- center -->
+                <div class="col-sm-auto"></div>
+        </div>
+                <div class="row">
+                <div><hr></div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col">
+                <div>
+              <img class="mind" src="assets/img/mind.png">
+                </div>
+                <div class="btm">
+                    <p>Mental health support and awareness is an issue very close to my heart. I worked for Mind for over three years leading a horticultural therapy service in Solihull. It was one of the toughest, yet most rewarding periods of my life. I learned first hand just how beneficial nature and a sense of community can be for us all.</p>
+                    <button href="#fakelink" class="btn btn-lg btn-info btn-fill">Filled Button</button>
+                </div>
+            </div>
+            <div class="col-md-6 col">
+                <div>
+              <img class="KFC" src="assets/img/KFC.png">
+                </div>
+                <div class="btm">
+                    <p>Kingstanding Food Community is another charity that I have previously worked with. They are based in the heart of Birmingham and they do a fantastic job of supporting people from the local community. The food from the community-run cafe is delicious and there's always something exciting to do down at their community allotments.</p>
+                    <button href="#fakelink" class="btn btn-lg btn-info btn-fill">Filled Button</button>
+                </div>
+            </div>   
+        </div>
+        <div class="space-30"></div>
+        <div class="row">
+             <div class="col-md-12 text-center">
+                <div class="credits">
+                    &copy; <script>document.write(new Date().getFullYear())</script> Beorn Wilde
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 
     <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
