--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="Beorn Wilde Icon" sizes="76x76" href="assets/img/new_logo2.png">
+	<link rel="icon" type="image/png" href="assets/img/new_logo2.png">
 		
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Get Shit Done Kit Template by Creative Tim</title>
+	<title>Beorn Wilde</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="http://creative-tim.com">
+                        <a href="#">
                             <div class="logo-container">
                                 <div class="logo">
                                     <img src="assets/img/new_logo.png">
@@ -51,9 +51,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                        <li><a href="components.html">Components</a></li>
+
+                        <li><a href="components.html">About</a></li>
+
+                        <li><a href="components.html">Services</a></li>
                         
-                        <li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li>
+                        <li><a href="https://form.jotform.com/202033555384350" class="btn btn-round btn-default">Contact Us</a></li>
+
                    </ul>
                   
                 </div><!-- /.navbar-collapse -->
@@ -79,20 +83,20 @@
               <h4>Beorn Wilde is a small yet passionate business operating within the West Midlands. We are reliable, customer-focused and dedicated to our work. For Beorn Wilde, our priority will always be a fusion of our clients’ needs combined with the needs of our environment.</h4>
             </div>
             <div class="buffer"></div>
-            <div id="btn-header">
+            <div class="btn-header">
                <button href="#fakelink" class="btn btn-default">Read More</button> 
             </div>     
     </div>
 </div>
 <div class="main" style="background-color: rgba(0,0,0,0.4);">
     <div class="col-container">
-        <div class="row">
-            <div class="col-md-6 col-vid">
+        <div class="row-btm">
+            <div class="col-vid">
                     <div class="iframe-wrap">
                       <iframe class="resp-iframe" src="https://www.youtube.com/embed/QXTXNSWOAqQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
                     </div>
             </div>
-            <div class="col-md-6 col-text">
+            <div class="col col-text">
                       <header>
                        <h1>PERMACULTURE</h1>
                        <hr>
@@ -109,7 +113,7 @@
 
 <div class="main">
     <div class="container-bot">
-        <div class="row">
+    <div class="row">
                 <div class="col-sm-auto"></div> 
                 <!-- center -->
                 <div class="col-sm-auto">
@@ -120,28 +124,29 @@
         </div>
                 <div class="row">
                 <div><hr></div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col">
+                </div>
+        <div class="row-btm">
+            <div class="col">
                 <div>
               <img class="mind" src="assets/img/mind.png">
                 </div>
                 <div class="btm">
                     <p>Mental health support and awareness is an issue very close to my heart. I worked for Mind for over three years leading a horticultural therapy service in Solihull. It was one of the toughest, yet most rewarding periods of my life. I learned first hand just how beneficial nature and a sense of community can be for us all.</p>
-                    <button href="#fakelink" class="btn btn-lg btn-info btn-fill">Filled Button</button>
+                    <a href="https://www.mind.org.uk/" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;" class="btn btn-lg btn-info btn-fill">Filled Button</a>
                 </div>
             </div>
-            <div class="col-md-6 col">
+
+            <div class="col">
                 <div>
               <img class="KFC" src="assets/img/KFC.png">
                 </div>
                 <div class="btm">
                     <p>Kingstanding Food Community is another charity that I have previously worked with. They are based in the heart of Birmingham and they do a fantastic job of supporting people from the local community. The food from the community-run cafe is delicious and there's always something exciting to do down at their community allotments.</p>
-                    <button href="#fakelink" class="btn btn-lg btn-info btn-fill">Filled Button</button>
+                    <a href="https://kingstandingfoodcommunity.co.uk/" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;" class="btn btn-lg btn-info btn-fill">Filled Button</a>
                 </div>
             </div>   
         </div>
-        <div class="space-30"></div>
+
         <div class="row">
              <div class="col-md-12 text-center">
                 <div class="credits">
@@ -149,6 +154,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
